# cem

./: .gitignore  .rustfmt.toml  BUILD.md  CICD_SUMMARY.md  CI_LOCAL_COMMANDS.md  Cargo.toml  DEBUG_X86_CONTEXT_CRASH.md  DESIGN.md  EPOLL_IMPLEMENTATION_COMPLETE.md  LINUX_FULL_SUPPORT_COMPLETE.md  PLAN.md  PLATFORM_STATUS.md  PR_REVIEW_UPDATES.md  README.md  STATUS.md  TEST_FIXES.md  X86_64_IMPLEMENTATION_COMPLETE.md  echo  factorial  hello_io  justfile  minimal_test  simple_match  test_nested_if_noopt  test_with_o0
.cargo/: config.toml
.claude/: settings.local.json
docs/: ARCHITECTURE.md  CONTEXT_SWITCHING_COMPARISON.md  DEBUGGING.md  IO_ARCHITECTURE.md  KNOWN_ISSUES.md  LINUX_EPOLL_PLAN.md  LLVM_TEXT_IR.md  NESTED_IF_CLANG_CRASH.md  PHASE_2A_RESULTS.md  README.md  SCHEDULER_IMPLEMENTATION.md  SELF_HOSTING.md  recursion.md
examples/: README.md  chat.cem  comparisons.cem  compile_echo.rs  compile_hello_io.rs  echo.cem  factorial.cem  hello.cem  multiply.cem  option_example.cem  real_test.cem  simple_test.cem
runtime/: compare.c  compare.h  context.c  context.h  context_arm64.s  context_x86_64.s  convert.c  convert.h  io.c  io.h  scheduler.c  scheduler.h  stack.c  stack.h  stack_mgmt.c  stack_mgmt.h  test_runtime  test_runtime.c
src/: lib.rs  main.rs
stdlib/: README.md  STDLIB_STATUS.md  core.cem  core_test.cem  prelude.cem  prelude_test.cem  unimplemented.cem
tests/: integration_test.rs  scheduler_test.cem  test_basic_strand.c  test_cleanup.c  test_context.c  test_context_perf.c  test_context_perf_simple.c  test_debug_metadata.rs  test_guard_page.c  (+10 more)
(+32 files in other folders)
